primeira parte do projeto

--- a/chemlab.html
+++ b/chemlab.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChemLab</title>
+    <link rel="stylesheet" href="chemlab.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <header>
+        <h1>ChemLab</h1><br>
+        <p>Aprenda química de uma forma mais facíl e divertida</p><br>
+
+        <nav id="">
+            <a class="cabecalho" href="">menu</a>
+            <a class="cabecalho" href="">games</a>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <a class="migame1" href="#">Minigames sobre Formulas Químicas</a>
+        </div><br>
+        <div>
+            <a class="migame2" href="#">Minigames sobre Elementos químicos</a>
+        </div><br>
+        <div>
+            <a class="migame3" href="#">Minigames sobre Equações Químicas</a>
+        </div><br>
+        <div>
+            <a  class="migame4" href="#">Minigames sobre Substâncias Químicas</a>
+        </div>
+    <footer>
+        <p>&copy;VionTech</p>''
+    </footer>
 </body>
 </html>
