primeira página feita

--- a/chemlab.html
+++ b/chemlab.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChemLab</title>
     <link rel="stylesheet" href="chemlab.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -13,25 +13,36 @@
         <p>Aprenda química de uma forma mais facíl e divertida</p><br>
 
         <nav id="">
-            <a class="cabecalho" href="">menu</a>
-            <a class="cabecalho" href="">games</a>
+            <a class="cabecalho" href="">Outras formas de aprendizado 📖</a>
+            <a class="cabecalho" href="">Games 🎮<img src="" alt=""></a>
         </nav>
     </header>
     <main>
         <div>
-            <a class="migame1" href="#">Minigames sobre Formulas Químicas</a>
-        </div><br>
-        <div>
-            <a class="migame2" href="#">Minigames sobre Elementos químicos</a>
-        </div><br>
-        <div>
-            <a class="migame3" href="#">Minigames sobre Equações Químicas</a>
-        </div><br>
-        <div>
-            <a  class="migame4" href="#">Minigames sobre Substâncias Químicas</a>
+            <a href="#"><img class="migame1" src="formulas quimicas.jpg" alt=""></a>
         </div>
-    <footer>
-        <p>&copy;VionTech</p>''
-    </footer>
+        <p class="tipodogame">Minigames sobre Formulas Químicas ↑</p><br><br>
+
+        <div>
+            <a href="#"><img class="migame2" src="O.png" alt=""></a>
+        </div>
+
+        <p class="tipodogame">Minigames sobre Elementos químicos ↑</p><br><br>
+
+        <div>
+            <a href="#"><img class="migame3" src="equacoes -quimicas.jpg" alt=""></a>
+        </div>
+
+        <p class="tipodogame">Minigames sobre Equações Químicas ↑</p><br><br>
+        <div>
+            <a href="#"><img class="migame4" src="substancias quimicas.jpg" alt=""></a>
+        </div>
+        <p class="tipodogame"> Minigames sobre Substâncias Químicas ↑</p><br>
+    
+     <br>
+     <footer>
+        <p>&copy;VionTech</p>
+     </footer>
+    </main>
 </body>
 </html>
