--- a/index.html
+++ b/index.html
@@ -13,31 +13,32 @@
         <p>Aprenda química de uma forma mais facíl e divertida</p><br>
 
         <nav id="">
-            <a class="cabecalho" href="">Outras formas de aprendizado 📖</a>
-            <a class="cabecalho" href="">Games 🎮<img src="" alt=""></a>
+            <a class="cabecalho" href="pagina 2/index.html">Outras formas de aprendizado 📖</a>
+            <a class="cabecalho" href="index.html">Games 🎮<img src="" alt=""></a>
         </nav>
     </header>
     <main>
+        <p class="tipodogame">Minigames sobre Formulas Químicas </p><br><br>
         <div>
-            <a href="#"><img class="migame1" src="formulas quimicas.jpg" alt=""></a>
+            <a href="./pagina 3/index.html"><img class="migame1" src="imagens/formulas quimicas.jpg" alt=""></a>
         </div>
-        <p class="tipodogame">Minigames sobre Formulas Químicas ↑</p><br><br>
+        <p class="tipodogame">Minigames sobre Elementos químicos </p><br><br>
 
         <div>
-            <a href="#"><img class="migame2" src="O.png" alt=""></a>
+            <a href="./pagina 4/index.html"><img class="migame2" src="imagens/O.png" alt=""></a>
         </div>
 
-        <p class="tipodogame">Minigames sobre Elementos químicos ↑</p><br><br>
+        <p class="tipodogame">Minigames sobre Equações Químicas </p><br><br>
 
         <div>
-            <a href="#"><img class="migame3" src="equacoes -quimicas.jpg" alt=""></a>
+            <a href="./pagina 5/index.html"><img class="migame3" src="imagens/equacoes -quimicas.jpg" alt=""></a>
         </div>
 
-        <p class="tipodogame">Minigames sobre Equações Químicas ↑</p><br><br>
+        <p class="tipodogame"> Minigames sobre Substâncias Químicas </p><br>
         <div>
-            <a href="#"><img class="migame4" src="substancias quimicas.jpg" alt=""></a>
+            <a href="./pagina 6/index.html"><img class="migame4" src="imagens/substancias quimicas.jpg" alt=""></a>
         </div>
-        <p class="tipodogame"> Minigames sobre Substâncias Químicas ↑</p><br>
+        
     
      <br>
      <footer>
