--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Aprenda química de uma forma mais facíl e divertida</p><br>
 
         <nav id="">
-            <a class="cabecalho" href="pagina 2/index.html">Outras formas de aprendizado 📖</a>
+            <a class="cabecalho" href="pagina 2/index.html">Estudos📖</a>
             <a class="cabecalho" href="index.html">Games 🎮<img src="" alt=""></a>
         </nav>
     </header>
