--- a/pagina 2/index.html
+++ b/pagina 2/index.html
@@ -13,7 +13,7 @@
         <p>Aprenda química de uma forma mais facíl e divertida</p><br>
 
         <nav id="">
-            <a class="cabecalho" href="index.html" target="">Outras formas de aprendizado 📖</a>
+            <a class="cabecalho" href="index.html" target="">Estudos📖</a>
             <a class="cabecalho" href="../index.html">Games 🎮</a>
         </nav>
     </header>
