--- a/pagina youtube/index.html
+++ b/pagina youtube/index.html
@@ -20,17 +20,14 @@
     <main id="container">
         <p class="destaque">Vídeo aulas que podem ajudar você em química</p><br><br><br><br>
 
-            <p class="destaque1">Química 1 ano do ensino médio</p>
-
-            <a  class="video" href="https://www.youtube.com/watch?v=XCZyx2IHdxA&list=PL0LfmDSptaT098AnGV_EBcFTF_TPoHUa7&pp=iAQB" target="_blank"><img class="video1" src="quimica 1 ano.jpg" alt=""></a>
-
-            <p class="destaque1">química 2 ano do ensino médio</p>
-
-            <a class="video"  href="https://www.youtube.com/watch?v=crUYW3QBqr8&list=PL0LfmDSptaT2FEUcshsdgpGGBeRVdVTqP&pp=iAQB" target="_blank"><img class="video2" src="quimica 2 ano.jpg" alt=""></a>
-
-            <p class="destaque1">química 3 ano do ensino médio</p>
-
-            <a class="video"  href="https://www.youtube.com/watch?v=h5uSHi7BnFo&list=PL0LfmDSptaT0mQbqDGB8cl1iqxqsCj3t1&pp=iAQB" target="_blank"><img class="video3" src="quimica 3 ano.jpg" alt=""></a>
+            <section id="videos" class="videos">
+                <p class="destaque1">Química 1 ano do ensino médio</p>
+                <a  class="video" href="https://www.youtube.com/watch?v=XCZyx2IHdxA&list=PL0LfmDSptaT098AnGV_EBcFTF_TPoHUa7&pp=iAQB" target="_blank"><img class="video1" src="quimica 1 ano.jpg" alt=""></a>
+                <p class="destaque1">química 2 ano do ensino médio</p>
+                <a class="video"  href="https://www.youtube.com/watch?v=crUYW3QBqr8&list=PL0LfmDSptaT2FEUcshsdgpGGBeRVdVTqP&pp=iAQB" target="_blank"><img class="video2" src="quimica 2 ano.jpg" alt=""></a>
+                <p class="destaque1">química 3 ano do ensino médio</p>
+                <a class="video"  href="https://www.youtube.com/watch?v=h5uSHi7BnFo&list=PL0LfmDSptaT0mQbqDGB8cl1iqxqsCj3t1&pp=iAQB" target="_blank"><img class="video3" src="quimica 3 ano.jpg" alt=""></a>
+            </section>
         
     </main>
     <a href="../index.html"><img class="voltar" src="voltar.jpg" alt=""></a>
