--- a/pasta resumos/index.html
+++ b/pasta resumos/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li>Introdução à Química
                     <ul>
-                        <li>Conceitos básicos de química e suas aplicações no cotidiano.</li>
+                        <li>Conceitos básicos de química e suas aplicações no <br>cotidiano.</li>
                         <li>Estrutura da matéria.</li>
                         <li>Elementos químicos e a tabela periódica.</li>
                         <li>Ligações químicas (iônica, covalente e metálica).</li>
@@ -107,7 +107,7 @@
 
         
             <main id="secundario">
-                <p>Resumos</p>
+                <p class="destaque">Resumos</p>
                 <h1 id="1ano">1 Ano</h1>
                 <h2>Introdução à Química</h2>
                 <p>Conceitos básicos de química e suas aplicações no cotidiano: Explora a natureza da química como ciência, suas divisões (orgânica, inorgânica, físico-química, analítica) e como seus princípios explicam fenômenos cotidianos, como a oxidação dos metais ou o cozimento dos alimentos.</p>
