--- a/pagina 2/index.html
+++ b/pagina 2/index.html
@@ -14,7 +14,7 @@
 
         <nav id="">
             <a class="cabecalho" href="index.html" target="">Estudos📖</a>
-            <a class="cabecalho" href="../index.html">Games 🎮</a>
+            <a class="cabecalho" href="../pagina de games/index.html">Games 🎮</a>
         </nav>
     </header>
     <main>
