--- a/pagina 3/index.html
+++ b/pagina 3/index.html
@@ -14,7 +14,7 @@
 
         <nav id="">
             <a class="cabecalho" href="../pagina 2/index.html"> Estudos📖</a>
-            <a class="cabecalho" href="../index.html">Games 🎮<img src="" alt=""></a>
+            <a class="cabecalho" href="../pagina de games/index.html">Games 🎮<img src="" alt=""></a>
         </nav>
     </header>
     <main id="container">
