--- a/index.html
+++ b/index.html
@@ -3,47 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChemLab</title>
+    <title>pagina principal</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header> <header>
         <h1>ChemLab</h1><br>
         <p>Aprenda química de uma forma mais facíl e divertida</p><br>
 
         <nav id="">
-            <a class="cabecalho" href="pagina 2/index.html">Estudos📖</a>
-            <a class="cabecalho" href="index.html">Games 🎮<img src="" alt=""></a>
+            <a class="cabecalho" href="./pagina 2/index.html">Estudos📖</a>
+            <a class="cabecalho" href="./pagina de games/index.html">Games 🎮<img src="" alt=""></a>
         </nav>
     </header>
+    <p class="destaque">Conheça mais sobre a ChemLab! Role a tela do celular:)</p>
     <main>
-        <p class="tipodogame">Minigames sobre Formulas Químicas </p><br><br>
-        <div>
-            <a href="./pagina 3/index.html"><img class="migame1" src="imagens/formulas quimicas.jpg" alt=""></a>
-        </div>
-        <p class="tipodogame">Minigames sobre Elementos químicos </p><br><br>
+        <section id="telefone">
+            <iframe src="./paginas dos iframes/divulgacao.html" name="tela" id="tela" frameborder="0">
+                Seu navegador infelizmente não é compativel.
+            </iframe>
+        </section>
+        <section id="sociais">
+            <a href="./paginas dos iframes/divulgacao.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
 
-        <div>
-            <a href="./pagina 4/index.html"><img class="migame2" src="imagens/O.png" alt=""></a>
-        </div>
+            <a href="./paginas dos iframes/nossa plataforma.html" target="tela"><img src="icone porcao.jpeg" alt=""></a>
 
-        <p class="tipodogame">Minigames sobre Equações Químicas </p><br><br>
+            <a href="./paginas dos iframes/github.html" target="tela"><img src="logo-github.jpg" alt=""></a>
 
-        <div>
-            <a href="./pagina 5/index.html"><img class="migame3" src="imagens/equacoes -quimicas.jpg" alt=""></a>
-        </div>
+            <a href="./paginas dos iframes/tipos de games.html" target="tela"><img src="icone frascos.jpeg" alt=""></a>
 
-        <p class="tipodogame"> Minigames sobre Substâncias Químicas </p><br>
-        <div>
-            <a href="./pagina 6/index.html"><img class="migame4" src="imagens/substancias quimicas.jpg" alt=""></a>
-        </div>
-        
-    
-     <br>
-     <footer>
-        <p>&copy;VionTech</p>
-     </footer>
+            <a href="./paginas dos iframes/formas de aprendizado.html" target="tela"><img src="icone livro.jpeg" alt=""></a>
+        </section>
     </main>
 </body>
 </html>
