--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> <header>
+    <header>
         <h1>ChemLab</h1><br>
         <p>Aprenda química de uma forma mais facíl e divertida</p><br>
 
@@ -35,6 +35,10 @@
 
             <a href="./paginas dos iframes/formas de aprendizado.html" target="tela"><img src="icone livro.jpeg" alt=""></a>
         </section>
-    </main>
+       
+    </main> 
+        <footer>
+            <p id="rodapé">&copy;VionTech</p>
+        </footer>
 </body>
 </html>
