--- a/paginas extras/elementos quimicos.html
+++ b/paginas extras/elementos quimicos.html
@@ -19,21 +19,15 @@
     </header>
     <main id="container">
         <p class="destaque">games relacionados a elementos químicos</p>
-        <div id="game1">
-            <a href=""><img src="" alt=""></a>
-        </div>
-        <div id="game2">
-            <a href=""><img src="" alt=""></a>
-        </div>
-        <div id="game3">
-            <a href=""><img src="" alt=""></a>
-        </div>
-        <div id="game4">
-            <a href=""><img src="" alt=""></a>
-        </div>
-        <div id="game5">
-            <a href=""><img src="" alt=""></a>
-        </div><br>
+        <section class="games">
+            <div id="game1">
+                <a href=""><img src="" alt=""></a>
+            </div>
+            <div id="game2">
+                <a href=""><img src="" alt=""></a>
+            </div>
+        </section>
+        
         
     </main>
 
