--- a/paginas extras/equacoes quimicas.html
+++ b/paginas extras/equacoes quimicas.html
@@ -19,21 +19,14 @@
     </header>
     <main id="container">
         <p class="destaque">games relacionados a Equações químicas</p>
-        <div id="game1">
-            <a href=""><img src="" alt=""></a>
-        </div>
-        <div id="game2">
-            <a href=""><img src="" alt=""></a>
-        </div>
-        <div id="game3">
-            <a href=""><img src="" alt=""></a>
-        </div>
-        <div id="game4">
-            <a href=""><img src="" alt=""></a>
-        </div>
-        <div id="game5">
-            <a href=""><img src="" alt=""></a>
-        </div>
+        <section  class="games">
+            <div id="game1">
+                <a href=""><img src="" alt=""></a>
+            </div>
+            <div id="game2">
+                <a href=""><img src="" alt=""></a>
+            </div>
+        </section>
         
     </main>
 
