--- a/paginas extras/formulas quimicas.html
+++ b/paginas extras/formulas quimicas.html
@@ -20,21 +20,14 @@
     <main id="container">
         <p class="destaque">games relacionados a formulas químicas</p>
         
+        <section  class="games">
             <div id="game1">
                 <a href=""><img src="" alt=""></a>
             </div>
             <div id="game2">
                 <a href=""><img src="" alt=""></a>
             </div>
-            <div id="game3">
-                <a href=""><img src="" alt=""></a>
-            </div>
-            <div id="game4">
-                <a href=""><img src="" alt=""></a>
-            </div>
-            <div id="game5">
-                <a href=""><img src="" alt=""></a>
-            </div>
+        </section>
 
     </main>
 
