--- a/paginas extras/conteudo iframes resumos/quimica ambiental.html
+++ b/paginas extras/conteudo iframes resumos/quimica ambiental.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>quimica ambiental</title>
+    <link rel="stylesheet" href="iframes.css">
 </head>
 <body>
-    
+    <h3>Química Ambiental</h3><br>
+    <p>Poluição da água, do ar e do solo: Aborda as fontes de poluição, seus efeitos no ambiente e nas populações humanas, e as estratégias para mitigação.</p>
+
+    <p>Impactos ambientais das reações químicas e da indústria química: Examina como as atividades industriais e as reações químicas podem impactar negativamente o meio ambiente.</p><br>
+
+    <p><a class="link" href="">leia mais sobre o assunto</a></p>
 </body>
 </html>
