--- a/paginas extras/formulas quimicas.html
+++ b/paginas extras/formulas quimicas.html
@@ -31,7 +31,7 @@
 
     </main>
 
-    <a href="../index.html"><img class="voltar" src="voltar.jpg" alt=""></a>
+    <a href="../paginas extras/games.html"><img class="voltar" src="voltar.jpg" alt=""></a>
     
     <footer>
         <p>&copy;VionTech</p>
