--- a/paginas extras/substancias quimicas.html
+++ b/paginas extras/substancias quimicas.html
@@ -30,7 +30,7 @@
         
     </main>
 
-    <a href="../index.html"><img class="voltar" src="voltar.jpg" alt=""></a>
+    <a href="../paginas extras/games.html"><img class="voltar" src="voltar.jpg" alt=""></a>
 
     <footer>
         <p>&copy;VionTech</p>
