--- a/paginas extras/youtube.html
+++ b/paginas extras/youtube.html
@@ -23,11 +23,11 @@
             <section id="videos" class="videos">
                 <p class="destaque1">Química 1 ano do ensino médio</p>
 
-                <a  class="video" href="https://www.youtube.com/watch?v=XCZyx2IHdxA&list=PL0LfmDSptaT098AnGV_EBcFTF_TPoHUa7&pp=iAQB" target="_blank"><img class="video1" src="../estilos/imagens/quimica 1 ano.jpg" alt=""></a>
+                <a  class="video" href="https://www.youtube.com/watch?v=XCZyx2IHdxA&list=PL0LfmDSptaT098AnGV_EBcFTF_TPoHUa7&pp=iAQB" target="_blank"><img class="video1" src="../estilos/imagens/quimica 1 ano.jpg" alt=""></a><br><br>
 
                 <p class="destaque1">química 2 ano do ensino médio</p>
 
-                <a class="video"  href="https://www.youtube.com/watch?v=crUYW3QBqr8&list=PL0LfmDSptaT2FEUcshsdgpGGBeRVdVTqP&pp=iAQB" target="_blank"><img class="video2" src="../estilos/imagens/quimica 2 ano.jpg" alt=""></a>
+                <a class="video"  href="https://www.youtube.com/watch?v=crUYW3QBqr8&list=PL0LfmDSptaT2FEUcshsdgpGGBeRVdVTqP&pp=iAQB" target="_blank"><img class="video2" src="../estilos/imagens/quimica 2 ano.jpg" alt=""></a><br><br>
 
                 <p class="destaque1">química 3 ano do ensino médio</p>
 
@@ -36,7 +36,7 @@
 
         
     </main>
-    <a href="../index.html"><img class="voltar" src="voltar.jpg" alt=""></a>
+    <a href="../paginas extras/estudos.html"><img class="voltar" src="voltar.jpg" alt=""></a>
     <footer>
         <p>&copy;VionTech</p>
     </footer>
