--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <div class="login">
-        <form>
+        <form action="./paginas extras/inicio.html">
             <h1>Faça Login</h1>
             <label for="username">Nome de Usuário/E-mail</label>
-            <input type="text" id="username">
+            <input type="text" id="username" required>
             <label for="password">Senha</label>
-            <input type="password" id="password">
-            <button type="submit"><a href="./paginas extras/inicio.html">Enviar</a></button>
+            <input type="password" id="password" required>
+            <button type="submit">Enviar</button>
             <a href="./paginas extras/registre se.html"><h2>Não tem conta? Registre-se</h2></a>
         </form>
     </div>
