--- a/paginas extras/divulgacao.html
+++ b/paginas extras/divulgacao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="../estilos/imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/home.css">
    
         
@@ -13,10 +14,10 @@
 
     <p>Veja como a nossa plataforma funciona clicando no <strong>segundo icone</strong>.</p><br>
 
-    <p>Conheça nossa pagina do github clicando no <strong>terceiro icone</strong>.</p><br>
+    <p>Conheça nossa página do github clicando no <strong>terceiro icone</strong>.</p><br>
 
-    <p>Quais são nossos tipos de games clicando no <strong>quarto icone</strong>.</p><br>
+    <p>Saiba quais são nossos tipos de games clicando no <strong>quarto icone</strong>.</p><br>
 
-    <p>conheça nossas formas de aprendizado clicando no <strong>quinto icone</strong>.</p><br>
+    <p>conheça nossas formas de aprendizado clicando no <strong>quinto icone ou em estudos</strong>.</p><br>
 </body>
 </html>
