--- a/paginas extras/elementos quimicos.html
+++ b/paginas extras/elementos quimicos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elementos químicos</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../estilos/imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/categorias.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
         
     </main>
 
-    <a href="../paginas extras/games.html"><img class="voltar" src="voltar.jpg" alt=""></a>
+    <a href="../paginas extras/games.html"><img class="voltar" src="../estilos/imagens/voltar.png" alt=""></a>
 
     <footer>
         <p>&copy;VionTech</p>
