--- a/paginas extras/equacoes quimicas.html
+++ b/paginas extras/equacoes quimicas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equações químicas</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../estilos/imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/categorias.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main id="container">
-        <p class="destaque">games relacionados a Equações químicas</p>
+        <p class="destaque">Games relacionados a Equações químicas</p>
         <section  class="games">
             <div id="game1">
                 <a href=""><img src="" alt=""></a>
@@ -30,11 +30,9 @@
         
     </main>
 
-    <a href="../paginas extras/games.html"><img class="voltar" src="voltar.jpg" alt=""></a>
+    <a href="../paginas extras/games.html"><img class="voltar" src="../estilos/imagens/voltar.png" alt=""></a>
     
     <footer>
         <p>&copy;VionTech</p>
     </footer>
-</body>
-</html>
-
+<
