--- a/paginas extras/formulas quimicas.html
+++ b/paginas extras/formulas quimicas.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulas químicas</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <title>Fórmulas químicas</title>
+    <link rel="shortcut icon" href="../estilos/imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/categorias.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main id="container">
-        <p class="destaque">games relacionados a formulas químicas</p>
+        <p class="destaque">Games relacionados a fórmulas químicas</p>
         
         <section  class="games">
             <div id="game1">
@@ -31,7 +31,7 @@
 
     </main>
 
-    <a href="../paginas extras/games.html"><img class="voltar" src="voltar.jpg" alt=""></a>
+    <a href="../paginas extras/games.html"><img class="voltar" src="../estilos/imagens/voltar.png" alt=""></a>
     
     <footer>
         <p>&copy;VionTech</p>
