--- a/paginas extras/games.html
+++ b/paginas extras/games.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChemLab</title>
     <link rel="stylesheet" href="../estilos/topicos.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../estilos/imagens/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -18,27 +18,27 @@
         </nav>
     </header>
     <main id="">
-        <p class="tipodogame">Minigames sobre Formulas Químicas </p><br><br>
+        <p class="tipodogame">Relacionado à Fórmulas Químicas </p><br><br>
         <div>
             <a href="../paginas extras/formulas quimicas.html"><img class="migame1" src="../estilos/imagens/formulas quimicas.jpg" alt=""></a>
         </div>
-        <p class="tipodogame">Minigames sobre Elementos químicos </p><br><br>
+        <p class="tipodogame">Relacionado à Elementos químicos </p><br><br>
 
         <div>
             <a href="../paginas extras/elementos quimicos.html"><img class="migame2" src="../estilos/imagens/O.png" alt=""></a>
         </div>
 
-        <p class="tipodogame">Minigames sobre Equações Químicas </p><br><br>
+        <p class="tipodogame">Relacionado à Equações Químicas </p><br><br>
 
         <div>
             <a href="../paginas extras/equacoes quimicas.html"><img class="migame3" src="../estilos/imagens/equacoes -quimicas.jpg" alt=""></a>
         </div>
 
-        <p class="tipodogame"> Minigames sobre Substâncias Químicas </p><br>
+        <p class="tipodogame">Relacionado à Substâncias Químicas </p><br>
         <div>
             <a href="../paginas extras/substancias quimicas.html"><img class="migame4" src="../estilos/imagens/substancias quimicas.jpg" alt=""></a>
         </div>
-        
+        <a href="../paginas extras/inicio.html"><img class="voltar" src="../estilos/imagens/voltar.png" alt=""></a>
         <br>
      <footer>
         <p>&copy;VionTech</p>
