--- a/paginas extras/inicio.html
+++ b/paginas extras/inicio.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina principal</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../estilos/imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/inicio.css">
 </head>
 <body>
+    <div class="user-icon-container">
+        <img src="../estilos/imagens/perfil.png" alt="Ícone de Usuário" class="user-icon" id="userIcon">
+        <div class="logout-popup" id="logoutPopup">
+            <a href="../index.html" id="logoutLink">Sair da conta</a>
+        </div>
+    </div>
+    <script src="../scripts/script.js"></script>
     <header>
         <h1>ChemLab</h1><br>
         <p>Aprenda química de uma forma mais facíl e divertida</p><br>
@@ -16,6 +23,9 @@
             <a class="cabecalho" href="../paginas extras/estudos.html">Estudos📖</a>
             <a class="cabecalho" href="../paginas extras/games.html">Games 🎮<img src="" alt=""></a>
         </nav>
+        <section id="usuario">
+            
+        </section>
     </header>
     <p class="destaque">Conheça mais sobre a ChemLab! Role a tela do celular:)</p>
     <main>
