--- a/paginas extras/nossa plataforma.html
+++ b/paginas extras/nossa plataforma.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>como funciona?</h2><br>
-    <p>nossa plataforma tem varios<strong> metodos de aprendizado</strong>, sendo esses, <strong>videos, resumos, quiz e games com niveis do dificil ao facíl</strong>, transformando química em algo bom de se aprender.</p>
+    <p>Nossa plataforma foi pensada para ajudar alunos do ensino médio com varias formas de aprendizados diferentes, na área de estudos temos 2 formas de aprendizado, três playlists do youtube com as melhores aulas de química para os <strong>primeiros, segundos e terceiros anos</strong> do <strong>ensino médio</strong>, e temos nossos resumos para estudos que foram também feitos de forma separada para<strong> primeiros, segundos e terceiros anos</strong>.</p>
     <img src="" alt="">
 </body>
 </html>
