--- a/paginas extras/estudos.html
+++ b/paginas extras/estudos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprenda outras formas de aprendizado</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../estilos/imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estudos.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
             <a href="../paginas extras/resumos.html"><img class="imagem" src="../estilos/imagens/livros.jpg" alt=""></a>
         </div><br>
 
-         <a href="../index.html"><img class="voltar" src="voltar.jpg" alt=""></a>
+         <a href="../paginas extras/inicio.html"><img class="voltar" src="../estilos/imagens/voltar.png" alt=""></a>
         <footer>
             <p>&copy;VionTech</p>
         </footer>
