--- a/paginas extras/registre se.html
+++ b/paginas extras/registre se.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/login.css">
+    <link rel="shortcut icon" href="../estilos/imagens/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="login">
-        <form>
+        <form action="../index.html">
             <h1>Registre-se</h1>
             <label for="username">E-mail</label>
-            <input type="text" id="username">
+            <input type="text" id="username" required maxlength="30">
             <label for="password">Senha</label>
-            <input type="password" id="password">
-            <label for="text">Confirmar senha</label>
-            <input type="text">
+            <input type="password" id="password" required maxlength="10">
+            <label for="password">Confirmar senha</label>
+            <input type="password">
             <button type="submit"><a href="../paginas extras/inicio.html">Enviar</a></button>
             <a href="../login.html"><h2>Já tem conta? Faça Login</h2></a>
         </form>
