--- a/paginas extras/tipos de games.html
+++ b/paginas extras/tipos de games.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Tipos de games</h3><br>
-    <p>Nós temos vários tipos de games <strong>clicando em games</strong> teremos alguns tópicos principais com games e quiz, que podem ajudar em matérias específicas que talvez você possa estar tendo dificuldade.</p><br>
+    <p>Nós temos vários tipos de games, <strong>clicando em games</strong> teremos alguns tópicos principais com games e quiz, que podem ajudar em matérias específicas que talvez você possa estar tendo dificuldade.</p><br>
+    <p></p>
 </body>
 </html>
