--- a/paginas extras/registre se.html
+++ b/paginas extras/registre se.html
@@ -16,8 +16,8 @@
             <input type="password" id="password" required maxlength="10">
             <label for="password">Confirmar senha</label>
             <input type="password">
-            <button type="submit"><a href="../paginas extras/inicio.html">Enviar</a></button>
-            <a href="../login.html"><h2>Já tem conta? Faça Login</h2></a>
+            <button type="submit">Enviar</button>
+            <a href="../index.html"><h2>Já tem conta? Faça Login</h2></a>
         </form>
     </div>
 </body>
