--- a/paginas extras/equacoes quimicas.html
+++ b/paginas extras/equacoes quimicas.html
@@ -20,12 +20,18 @@
     <main id="container">
         <p class="destaque">Games relacionados a Equações químicas</p>
         <section  class="games">
-            <div id="game1">
-                <a href=""><img src="" alt=""></a>
-            </div>
-            <div id="game2">
-                <a href=""><img src="" alt=""></a>
-            </div>
+            <a id="game1" href="../Quiz/equacoes quimicas.html">
+                <div>
+                    <img class="quiz" src="../estilos/imagens/equacoes -quimicas.jpg" alt="">
+                </div>
+                <p>Quiz</p>
+            </a>
+            <a id="game2" href="">
+                <div >
+                    <img class="quiz" src="" alt="">
+                </div>
+                <p>Game</p>
+            </a>
         </section>
         
     </main>
