--- a/paginas extras/formulas quimicas.html
+++ b/paginas extras/formulas quimicas.html
@@ -21,12 +21,19 @@
         <p class="destaque">Games relacionados a fórmulas químicas</p>
         
         <section  class="games">
-            <div id="game1">
-                <a href=""><img src="" alt=""></a>
-            </div>
-            <div id="game2">
-                <a href=""><img src="" alt=""></a>
-            </div>
+            <a id="game1" href="../Quiz/formulas quimicas.html">
+                <div>
+                    <img class="quiz" src="../estilos/imagens/formulas quimicas.jpg" alt="">
+                </div>
+                <p>Quiz</p><br>
+                
+            </a>
+            <a id="game2" href="">
+                <div >
+                    <img class="quiz" src="" alt="">
+                </div>
+                <p>Game</p>
+            </a>
         </section>
 
     </main>
