--- a/Quiz/elementos quimicos.html
+++ b/Quiz/elementos quimicos.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <div id="quiz-container"><!--container do quiz-->
-        <div id="question"></div><!--pergunta com id question-->
+        <div id="question">Qual é o símbolo químico do elemento ouro?</div><!--pergunta com id question-->
         <ul id="options" class="options"></ul><!--deixa uma opção embaixo da outra-->
         <div id="result" style="display: none;">Resposta: <span id="answer-result"></span></div>
-        <div id="score" style="display: none;">Pontuação: <span id="score-value">0</span></div>
+        <div id="score" style="display: none;"> Pontuação: <span id="score-value">0</span></div><br>
+        <a id="linkvoltar" href="../paginas extras/elementos quimicos.html">
+            <div id="voltar">Voltar para a página de games</div>
+        </a><br>
+        <a href="elementos quimicos.html"><img id="recarregar" src="../estilos/imagens/recarregar.png" alt=""></a>
     </div>
+    
     <script src="../scripts/elementos quimicos.js"></script>
 </body>
 </html>
