--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/login.css">
+    <link rel="shortcut icon" href="./estilos/imagens/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="login">
