--- a/paginas extras/elementos quimicos.html
+++ b/paginas extras/elementos quimicos.html
@@ -20,12 +20,18 @@
     <main id="container">
         <p class="destaque">games relacionados a elementos químicos</p>
         <section class="games">
-            <div id="game1">
-                <a href=""><img src="" alt=""></a>
-            </div>
-            <div id="game2">
-                <a href=""><img src="" alt=""></a>
-            </div>
+            <a id="game1" href="../Quiz/elementos quimicos.html">
+                <div>
+                    <img class="quiz" src="../estilos/imagens/O.png" alt="">
+                </div>
+                <p>Quiz</p>
+            </a>
+            <a id="game2" href="">
+                <div >
+                    <img class="quiz" src="" alt="">
+                </div>
+                <p>Game</p>
+            </a>
         </section>
         
         
