--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/login.css">
     <link rel="shortcut icon" href="./estilos/imagens/favicon.png" type="image/x-icon">
+    <style>
+        img {
+           width: 15px;
+           height: 15px;
+           display: inline;
+        }
+    </style>
 </head>
 <body>
     <div class="login">
@@ -12,7 +19,7 @@
             <h1>Faça Login</h1>
             <label for="username">Nome de Usuário/E-mail</label>
             <input type="text" id="username" required>
-            <label for="password">Senha</label>
+            <label for="password">Senha<img src="./estilos/imagens/cadeado.png" alt=""></label>
             <input type="password" id="password" required>
             <button type="submit">Enviar</button>
             <a href="./paginas extras/registre se.html"><h2>Não tem conta? Registre-se</h2></a>
