--- a/paginas extras/formulas quimicas.html
+++ b/paginas extras/formulas quimicas.html
@@ -19,7 +19,7 @@
     </header>
     <main id="container">
         <p class="destaque">Games relacionados a fórmulas químicas</p>
-        
+        <p class="aviso">Vire o celular se o Quiz estiver pequeno ou zoom.</p>
         <section  class="games">
             <a id="game1" href="../Quiz/formulas quimicas.html">
                 <div>
