--- a/paginas extras/substancias quimicas.html
+++ b/paginas extras/substancias quimicas.html
@@ -19,6 +19,7 @@
     </header>
     <main id="container">
         <p class="destaque">Games relacionados a Substâncias químicas</p>
+        <p class="aviso">Vire o celular se o Quiz estiver pequeno ou zoom.</p>
         <section  class="games">
             <a id="game1" href="../Quiz/substancias quimicas.html">
                 <div>
