--- a/paginas extras/formulas quimicas.html
+++ b/paginas extras/formulas quimicas.html
@@ -30,7 +30,7 @@
             </a>
             <a id="game2" href="">
                 <div >
-                    <img class="quiz" src="" alt="">
+                    <img class="quiz" src="../estilos/imagens/chemlab.jpg" alt="">
                 </div>
                 <p>Game</p>
             </a>
