aviso de desenvolvimento

--- a/paginas extras/elementos quimicos.html
+++ b/paginas extras/elementos quimicos.html
@@ -27,7 +27,7 @@
                 </div>
                 <p>Quiz</p>
             </a>
-            <a id="game2" href="">
+            <a id="game2" href="" onclick="window.alert('Este jogo ainda está em desenvolvimento, tente mais tarde!')">
                 <div >
                     <img class="quiz" src="../estilos/imagens/chemlab.jpg" alt="">
                 </div>
