--- a/paginas extras/formulas quimicas.html
+++ b/paginas extras/formulas quimicas.html
@@ -28,7 +28,7 @@
                 <p>Quiz</p><br>
                 
             </a>
-            <a id="game2" href="">
+            <a id="game2" href="" onclick="window.alert('Este jogo ainda está em desenvolvimento, tente mais tarde!')">
                 <div >
                     <img class="quiz" src="../estilos/imagens/chemlab.jpg" alt="">
                 </div>
