--- a/paginas extras/home.html
+++ b/paginas extras/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
+
     <link rel="stylesheet" href="../estilos/style.css">
+    
     <link rel="shortcut icon" href="../estilos/imagens/ChemLab-removebg-preview.png" type="image/x-icon">
     <title>Chemlab</title>
 </head>
@@ -24,7 +26,7 @@
             <li id="link2" class="link"><a href="categorias.html">Categorias</a></li>
             <li id="link3" class="link"><a href="#">Sobre</a></li>
         </ul>
-        <button class="btn">Entrar</button>
+        <button class="btn"><a class="link-entrar" href="../index.html">Entrar</a></button>
     </nav>
 
     <header class="container">
@@ -36,7 +38,7 @@
             <p>
                 Aprenda química de maneiras divertidas de graça.
             </p>
-            <button class="btn">Se Inscreva</button>
+            <button class="btn"><a class="link-entrar" href="https://www.youtube.com/@ChemlabOfc" target="_blank">Se Inscreva</a></button>
         </div>
         <div class="image">
             <img src="../estilos/imagens/Design_sem_nome-transformed-Photoroom.png">
