--- a/paginas extras/categorias.html
+++ b/paginas extras/categorias.html
@@ -64,7 +64,7 @@
                 </div>
             </a>
 
-            <a href="" class="link-categoria">
+            <a href="../paginas extras/conteudo-resumos/resumos.html" class="link-categoria">
                 <div class="categoria">
                     <span><i class="ri-git-repository-fill"></i></span>
                     <h4>resumos</h4>
