--- a/Quiz/substancias quimicas.html
+++ b/Quiz/substancias quimicas.html
@@ -11,8 +11,8 @@
         <ul id="options" class="options"></ul><!--deixa uma opção embaixo da outra-->
         <div id="result" style="display: none;">Resposta: <span id="answer-result"></span></div>
         <div id="score" style="display: none;">Pontuação: <span id="score-value">0</span></div><br>
-        <a id="linkvoltar" href="../paginas extras/substancias quimicas.html">
-            <div id="voltar">Voltar para a página de games</div>
+        <a id="linkvoltar" href="../paginas extras/categorias.html">
+            <div id="voltar">Voltar para categorias</div>
         </a><br>
         <a href="substancias quimicas.html"><img id="recarregar" src="../estilos/imagens/recarregar.png" alt=""></a>
     </div>
