--- a/paginas extras/categorias.html
+++ b/paginas extras/categorias.html
@@ -9,52 +9,52 @@
 </head>
 <body>
     <section class="container">
-        <h2 class="header">conheça nossas categorias</h2>
+        <h2 class="header">Conheça nossas categorias</h2>
         <span class="blur"></span>
         <span class="blur"></span>
         <div class="categorias">
 
-            <a href="" class="link-categoria">
+            <a href="../Quiz/substancias quimicas.html" class="link-categoria">
                 <div class="categoria">
                     <span><i class="ri-git-repository-fill"></i></span>
                     <h4>Substâncias químicas</h4>
                     <p>
-                        aqui Você pode encontrar conteúdos relacionados á Substâncias químicas, quiz e game.
+                        aqui temos um quiz sobre Substâncias químicas, aproveite para exercitar oque aprendeu!
                     </p>
                 </div>
             </a>
 
-            <a href="" class="link-categoria">
+            <a href="../Quiz/equacoes quimicas.html" class="link-categoria">
                 <div class="categoria">
                     <span><i class="ri-git-repository-fill"></i></span>
                     <h4>Equações químicas</h4>
                     <p>
-                        aqui Você pode encontrar conteúdos relacionados à Equações químicas, quiz e game.
+                        aqui temos um quiz sobre Equações químicas, aproveite para exercitar oque aprendeu!
                     </p>
                 </div>
             </a>
 
-            <a href="" class="link-categoria">
+            <a href="../Quiz/elementos quimicos.html" class="link-categoria">
                 <div class="categoria">
                     <span><i class="ri-git-repository-fill"></i></span>
                     <h4>Elementos químicos</h4>
                     <p>
-                        aqui Você pode encontrar conteúdos relacionados à Elementos químicos, quiz e game.
+                        aqui temos um quiz sobre elementos químicos, aproveite para exercitar oque aprendeu!
                     </p>
                 </div>
             </a>
 
-            <a href="" class="link-categoria">
+            <a href="../Quiz/formulas quimicas.html" class="link-categoria">
                 <div class="categoria">
                     <span><i class="ri-git-repository-fill"></i></span>
                     <h4>Fórmulas químicas</h4>
                     <p>
-                        aqui Você pode encontrar conteúdos relacionados à Fórmulas químicas, quiz e game.
+                        aqui temos um quiz sobre Fórmulas químicas, aproveite para exercitar oque aprendeu!
                     </p>
                 </div>
             </a>
 
-            <a href="" class="link-categoria">
+            <a href="https://www.youtube.com/@ChemlabOfc" class="link-categoria" target="_blank">
                 <div class="categoria">
                     <span><i class="ri-git-repository-fill"></i></span>
                     <h4>Vídeo aulas</h4>
@@ -70,6 +70,16 @@
                     <h4>resumos</h4>
                     <p>
                         Esses resumos irão te ajudar a estudar para provas de uma maneira mais simples, sem tantos textos e focando nas partes mais importantes.
+                    </p>
+                </div>
+            </a>
+
+            <a href="" class="link-categoria">
+                <div class="categoria">
+                    <img id="game" src="../estilos/imagens/chemlab.jpg" alt="">
+                    <h4>Magic Master</h4>
+                    <p>
+                        Conheça nosso game, aprenda de forma divertida.Conheça um mundo divertido e complete todas as missões.
                     </p>
                 </div>
             </a>
