--- a/paginas extras/categorias.html
+++ b/paginas extras/categorias.html
@@ -67,7 +67,7 @@
             <a href="../paginas extras/conteudo-resumos/resumos.html" class="link-categoria">
                 <div class="categoria">
                     <span><i class="ri-git-repository-fill"></i></span>
-                    <h4>resumos</h4>
+                    <h4>Conteúdo</h4>
                     <p>
                         Esses resumos irão te ajudar a estudar para provas de uma maneira mais simples, sem tantos textos e focando nas partes mais importantes.
                     </p>
