--- a/paginas extras/home.html
+++ b/paginas extras/home.html
@@ -81,12 +81,12 @@
             </div>
         </div>
     </section>
-
-    <section class="container">
+<!--<section class="container">
         <h2 class="header">TENHA ACESSO A CONTEÚDOS EXCLUSIVOS</h2>
         <p class="sub-header">
             Você pode nos dar contribuições em dinheiro para nos ajudar e, com isso, ter acesso antecipado a novidades
         </p>
+        
         <div class="pricing">
             <div class="card">
                 <div class="content">
@@ -146,7 +146,8 @@
                 <button class="btn">Participe agora</button>
             </div>
         </div>
-    </section>
+    </section>-->
+    
 
     <footer class="container">
         <span class="blur"></span>
