--- a/paginas extras/home.html
+++ b/paginas extras/home.html
@@ -52,7 +52,7 @@
                 <span><i class="ri-money-dollar-box-line"></i></span>
                 <h4>Video Aulas Gratuitas</h4>
                 <p>
-                   Temos vídeos aulas gratuitas para te ajudar a entender melhor a matéria e facilitar nas atividades práticas.                            
+                Temos vídeos aulas gratuitas para te ajudar a entender melhor a matéria e facilitar nas atividades práticas]<p>                            
                 <a href="#">Ver mais <i class="ri-arrow-right-line"></i></a>
             </div>
             <div class="card">
