--- a/paginas extras/home.html
+++ b/paginas extras/home.html
@@ -179,9 +179,7 @@
         </div>
         <div class="column">
             <h4>Contato</h4>
-            <a href="#">Fale Conosco</a>
-            <a href="#">Política de Privacidade</a>
-            <a href="#">Termos & Condições</a>
+            <a href="../paginas extras/politica.html">Política de Privacidade</a>
         </div>
     </footer>
 
